feat: update sorl API
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>