@@ -16,11 +16,9 @@
 package org.eclipse.jnosql.databases.solr.communication;
 
 import org.assertj.core.api.SoftAssertions;
-import org.eclipse.jnosql.communication.document.Document;
-import org.eclipse.jnosql.communication.document.DocumentDeleteQuery;
-import org.eclipse.jnosql.communication.document.DocumentEntity;
-import org.eclipse.jnosql.communication.document.DocumentQuery;
-import org.eclipse.jnosql.communication.document.Documents;
+import org.eclipse.jnosql.communication.semistructured.CommunicationEntity;
+import org.eclipse.jnosql.communication.semistructured.Element;
+import org.eclipse.jnosql.communication.semistructured.Elements;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
@@ -41,10 +39,10 @@ import java.util.stream.StreamSupport;
 
 import static java.util.Arrays.asList;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.eclipse.jnosql.communication.document.DocumentDeleteQuery.delete;
-import static org.eclipse.jnosql.communication.document.DocumentQuery.select;
 import static org.eclipse.jnosql.communication.driver.IntegrationTest.MATCHES;
 import static org.eclipse.jnosql.communication.driver.IntegrationTest.NAMED;
+import static org.eclipse.jnosql.communication.semistructured.DeleteQuery.delete;
+import static org.eclipse.jnosql.communication.semistructured.SelectQuery.select;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -64,9 +62,9 @@ public class DefaultSolrDocumentManagerTest {
 
     @Test
     void shouldInsert() {
-        DocumentEntity entity = getEntity();
-        DocumentEntity documentEntity = entityManager.insert(entity);
-        assertTrue(documentEntity.documents().stream().map(Document::name).anyMatch(s -> s.equals(ID)));
+        var entity = getEntity();
+        var documentEntity = entityManager.insert(entity);
+        assertTrue(documentEntity.elements().stream().map(Element::name).anyMatch(s -> s.equals(ID)));
     }
 
     @Test
@@ -76,23 +74,23 @@ public class DefaultSolrDocumentManagerTest {
 
     @Test
     void shouldUpdateSave() {
-        DocumentEntity entity = getEntity();
+        var entity = getEntity();
         entityManager.insert(entity);
-        Document newField = Documents.of("newField", "10");
+        var newField = Elements.of("newField", "10");
         entity.add(newField);
-        DocumentEntity updated = entityManager.update(entity);
+        var updated = entityManager.update(entity);
         assertEquals(newField, updated.find("newField").get());
     }
 
     @Test
     void shouldRemoveEntity() {
-        DocumentEntity documentEntity = entityManager.insert(getEntity());
+        var documentEntity = entityManager.insert(getEntity());
 
-        Optional<Document> id = documentEntity.find(ID);
-        DocumentQuery query = select().from(COLLECTION_NAME)
+        Optional<Element> id = documentEntity.find(ID);
+        var query = select().from(COLLECTION_NAME)
                 .where(ID).eq(id.get().get())
                 .build();
-        DocumentDeleteQuery deleteQuery = delete().from(COLLECTION_NAME).where(ID)
+        var deleteQuery = delete().from(COLLECTION_NAME).where(ID)
                 .eq(id.get().get())
                 .build();
 
@@ -102,16 +100,16 @@ public class DefaultSolrDocumentManagerTest {
 
     @Test
     void shouldFindDocument() {
-        DocumentEntity entity = entityManager.insert(getEntity());
-        Optional<Document> id = entity.find(ID);
+        CommunicationEntity entity = entityManager.insert(getEntity());
+        Optional<Element> id = entity.find(ID);
 
-        DocumentQuery query = select().from(COLLECTION_NAME)
+        var query = select().from(COLLECTION_NAME)
                 .where(ID).eq(id.get().get())
                 .build();
 
-        List<DocumentEntity> entities = entityManager.select(query).collect(Collectors.toList());
+        List<CommunicationEntity> entities = entityManager.select(query).collect(Collectors.toList());
         assertFalse(entities.isEmpty());
-        final DocumentEntity result = entities.get(0);
+        final CommunicationEntity result = entities.get(0);
 
         assertEquals(entity.find("name").get(), result.find("name").get());
         assertEquals(entity.find("city").get(), result.find("city").get());
@@ -121,17 +119,17 @@ public class DefaultSolrDocumentManagerTest {
 
     @Test
     void shouldFindDocument2() {
-        DocumentEntity entity = entityManager.insert(getEntity());
-        Optional<Document> id = entity.find(ID);
+        var entity = entityManager.insert(getEntity());
+        Optional<Element> id = entity.find(ID);
 
-        DocumentQuery query = select().from(COLLECTION_NAME)
+        var query = select().from(COLLECTION_NAME)
                 .where("name").eq("Poliana")
                 .and("city").eq("Salvador").and(ID).eq(id.get().get())
                 .build();
 
-        List<DocumentEntity> entities = entityManager.select(query).collect(Collectors.toList());
+        List<CommunicationEntity> entities = entityManager.select(query).collect(Collectors.toList());
         assertFalse(entities.isEmpty());
-        final DocumentEntity result = entities.get(0);
+        final CommunicationEntity result = entities.get(0);
 
         assertEquals(entity.find("name").get(), result.find("name").get());
         assertEquals(entity.find("city").get(), result.find("city").get());
@@ -139,119 +137,119 @@ public class DefaultSolrDocumentManagerTest {
 
     @Test
     void shouldFindDocument3() {
-        DocumentEntity entity = entityManager.insert(getEntity());
-        Optional<Document> id = entity.find(ID);
-        DocumentQuery query = select().from(COLLECTION_NAME)
+        var entity = entityManager.insert(getEntity());
+        Optional<Element> id = entity.find(ID);
+        var query = select().from(COLLECTION_NAME)
                 .where("name").eq("Poliana")
                 .or("city").eq("Salvador")
                 .and(id.get().name()).eq(id.get().get())
                 .build();
 
-        List<DocumentEntity> entities = entityManager.select(query).collect(Collectors.toList());
+        List<CommunicationEntity> entities = entityManager.select(query).collect(Collectors.toList());
         assertFalse(entities.isEmpty());
-        final DocumentEntity result = entities.get(0);
+        final CommunicationEntity result = entities.get(0);
         assertEquals(entity.find("name").get(), result.find("name").get());
         assertEquals(entity.find("city").get(), result.find("city").get());
     }
 
     @Test
     void shouldFindDocumentGreaterThan() {
-        DocumentDeleteQuery deleteQuery = delete().from(COLLECTION_NAME).build();
+        var deleteQuery = delete().from(COLLECTION_NAME).build();
         entityManager.delete(deleteQuery);
-        Iterable<DocumentEntity> entitiesSaved = entityManager.insert(getEntitiesWithValues());
-        List<DocumentEntity> entities = StreamSupport.stream(entitiesSaved.spliterator(), false).collect(Collectors.toList());
+        Iterable<CommunicationEntity> entitiesSaved = entityManager.insert(getEntitiesWithValues());
+        List<CommunicationEntity> entities = StreamSupport.stream(entitiesSaved.spliterator(), false).collect(Collectors.toList());
 
-        DocumentQuery query = select().from(COLLECTION_NAME)
+        var query = select().from(COLLECTION_NAME)
                 .where("age").gt(22)
                 .and("type").eq("V")
                 .build();
 
-        List<DocumentEntity> entitiesFound = entityManager.select(query).collect(Collectors.toList());
+        List<CommunicationEntity> entitiesFound = entityManager.select(query).collect(Collectors.toList());
         assertEquals(3, entitiesFound.size());
     }
 
     @Test
     void shouldFindNot() {
-        DocumentDeleteQuery deleteQuery = delete().from(COLLECTION_NAME).build();
+        var deleteQuery = delete().from(COLLECTION_NAME).build();
         entityManager.delete(deleteQuery);
         entityManager.insert(getEntitiesWithValues());
-        DocumentQuery query = select().from(COLLECTION_NAME)
+        var query = select().from(COLLECTION_NAME)
                 .where("name").not().eq("Lucas").build();
-        List<DocumentEntity> entitiesFound = entityManager.select(query).collect(Collectors.toList());
+        List<CommunicationEntity> entitiesFound = entityManager.select(query).collect(Collectors.toList());
         assertEquals(2, entitiesFound.size());
     }
 
     @Test
     void shouldFindDocumentGreaterEqualsThan() {
-        DocumentDeleteQuery deleteQuery = delete().from(COLLECTION_NAME).build();
+        var deleteQuery = delete().from(COLLECTION_NAME).build();
         entityManager.delete(deleteQuery);
-        Iterable<DocumentEntity> entitiesSaved = entityManager.insert(getEntitiesWithValues());
-        List<DocumentEntity> entities = StreamSupport.stream(entitiesSaved.spliterator(), false).collect(Collectors.toList());
+        Iterable<CommunicationEntity> entitiesSaved = entityManager.insert(getEntitiesWithValues());
+        List<CommunicationEntity> entities = StreamSupport.stream(entitiesSaved.spliterator(), false).collect(Collectors.toList());
 
-        DocumentQuery query = select().from(COLLECTION_NAME)
+        var query = select().from(COLLECTION_NAME)
                 .where("age").gte(23)
                 .and("type").eq("V")
                 .build();
 
-        List<DocumentEntity> entitiesFound = entityManager.select(query).collect(Collectors.toList());
+        List<CommunicationEntity> entitiesFound = entityManager.select(query).collect(Collectors.toList());
         assertEquals(2, entitiesFound.size());
         assertThat(entitiesFound).isNotIn(entities.get(0));
     }
 
     @Test
     void shouldFindDocumentLesserThan() {
-        DocumentDeleteQuery deleteQuery = delete().from(COLLECTION_NAME).build();
+        var deleteQuery = delete().from(COLLECTION_NAME).build();
         entityManager.delete(deleteQuery);
-        Iterable<DocumentEntity> entitiesSaved = entityManager.insert(getEntitiesWithValues());
+        Iterable<CommunicationEntity> entitiesSaved = entityManager.insert(getEntitiesWithValues());
 
-        DocumentQuery query = select().from(COLLECTION_NAME)
+        var query = select().from(COLLECTION_NAME)
                 .where("age").lt(23)
                 .and("type").eq("V")
                 .build();
 
-        List<DocumentEntity> entitiesFound = entityManager.select(query).collect(Collectors.toList());
+        List<CommunicationEntity> entitiesFound = entityManager.select(query).toList();
         assertEquals(2, entitiesFound.size());
     }
 
     @Test
     void shouldFindDocumentLesserEqualsThan() {
-        DocumentDeleteQuery deleteQuery = delete().from(COLLECTION_NAME).build();
+        var deleteQuery = delete().from(COLLECTION_NAME).build();
         entityManager.delete(deleteQuery);
-        Iterable<DocumentEntity> entitiesSaved = entityManager.insert(getEntitiesWithValues());
-        List<DocumentEntity> entities = StreamSupport.stream(entitiesSaved.spliterator(), false).collect(Collectors.toList());
+        Iterable<CommunicationEntity> entitiesSaved = entityManager.insert(getEntitiesWithValues());
+        List<CommunicationEntity> entities = StreamSupport.stream(entitiesSaved.spliterator(), false).collect(Collectors.toList());
 
-        DocumentQuery query = select().from(COLLECTION_NAME)
+        var query = select().from(COLLECTION_NAME)
                 .where("age").lte(23)
                 .and("type").eq("V")
                 .build();
 
-        List<DocumentEntity> entitiesFound = entityManager.select(query).collect(Collectors.toList());
+        List<CommunicationEntity> entitiesFound = entityManager.select(query).collect(Collectors.toList());
         assertEquals(2, entitiesFound.size());
     }
 
     @Test
     void shouldFindDocumentLike() {
-        DocumentDeleteQuery deleteQuery = delete().from(COLLECTION_NAME).build();
+        var deleteQuery = delete().from(COLLECTION_NAME).build();
         entityManager.delete(deleteQuery);
-        Iterable<DocumentEntity> entities = entityManager.insert(getEntitiesWithValues());
+        Iterable<CommunicationEntity> entities = entityManager.insert(getEntitiesWithValues());
 
-        DocumentQuery query = select().from(COLLECTION_NAME)
+        var query = select().from(COLLECTION_NAME)
                 .where("name").like("Lu*")
                 .and("type").eq("V")
                 .build();
 
-        List<DocumentEntity> entitiesFound = entityManager.select(query).collect(Collectors.toList());
+        List<CommunicationEntity> entitiesFound = entityManager.select(query).collect(Collectors.toList());
         assertEquals(2, entitiesFound.size());
     }
 
     @Test
     void shouldFindDocumentIn() {
-        DocumentDeleteQuery deleteQuery = delete().from(COLLECTION_NAME).build();
+        var deleteQuery = delete().from(COLLECTION_NAME).build();
         entityManager.delete(deleteQuery);
-        Iterable<DocumentEntity> entitiesSaved = entityManager.insert(getEntitiesWithValues());
-        List<DocumentEntity> entities = StreamSupport.stream(entitiesSaved.spliterator(), false).collect(Collectors.toList());
+        Iterable<CommunicationEntity> entitiesSaved = entityManager.insert(getEntitiesWithValues());
+        List<CommunicationEntity> entities = StreamSupport.stream(entitiesSaved.spliterator(), false).collect(Collectors.toList());
 
-        DocumentQuery query = select().from(COLLECTION_NAME)
+        var query = select().from(COLLECTION_NAME)
                 .where("location").in(asList("BR", "US"))
                 .and("type").eq("V")
                 .build();
@@ -261,18 +259,18 @@ public class DefaultSolrDocumentManagerTest {
 
     @Test
     void shouldFindDocumentStart() {
-        DocumentDeleteQuery deleteQuery = delete().from(COLLECTION_NAME).build();
+        var deleteQuery = delete().from(COLLECTION_NAME).build();
         entityManager.delete(deleteQuery);
-        Iterable<DocumentEntity> entitiesSaved = entityManager.insert(getEntitiesWithValues());
-        List<DocumentEntity> entities = StreamSupport.stream(entitiesSaved.spliterator(), false).collect(Collectors.toList());
+        Iterable<CommunicationEntity> entitiesSaved = entityManager.insert(getEntitiesWithValues());
+        List<CommunicationEntity> entities = StreamSupport.stream(entitiesSaved.spliterator(), false).collect(Collectors.toList());
 
-        DocumentQuery query = select().from(COLLECTION_NAME)
+        var query = select().from(COLLECTION_NAME)
                 .where("age").gt(22)
                 .and("type").eq("V")
                 .skip(1L)
                 .build();
 
-        List<DocumentEntity> entitiesFound = entityManager.select(query).collect(Collectors.toList());
+        List<CommunicationEntity> entitiesFound = entityManager.select(query).collect(Collectors.toList());
         assertEquals(2, entitiesFound.size());
         assertThat(entitiesFound).isNotIn(entities.get(0));
 
@@ -289,18 +287,18 @@ public class DefaultSolrDocumentManagerTest {
 
     @Test
     void shouldFindDocumentLimit() {
-        DocumentDeleteQuery deleteQuery = delete().from(COLLECTION_NAME).build();
+        var deleteQuery = delete().from(COLLECTION_NAME).build();
         entityManager.delete(deleteQuery);
-        Iterable<DocumentEntity> entitiesSaved = entityManager.insert(getEntitiesWithValues());
-        List<DocumentEntity> entities = StreamSupport.stream(entitiesSaved.spliterator(), false).collect(Collectors.toList());
+        Iterable<CommunicationEntity> entitiesSaved = entityManager.insert(getEntitiesWithValues());
+        List<CommunicationEntity> entities = StreamSupport.stream(entitiesSaved.spliterator(), false).toList();
 
-        DocumentQuery query = select().from(COLLECTION_NAME)
+        var query = select().from(COLLECTION_NAME)
                 .where("age").gt(22)
                 .and("type").eq("V")
                 .limit(1L)
                 .build();
 
-        List<DocumentEntity> entitiesFound = entityManager.select(query).collect(Collectors.toList());
+        List<CommunicationEntity> entitiesFound = entityManager.select(query).collect(Collectors.toList());
         assertEquals(1, entitiesFound.size());
         assertThat(entitiesFound).isNotIn(entities.get(0));
 
@@ -317,18 +315,18 @@ public class DefaultSolrDocumentManagerTest {
 
     @Test
     void shouldFindDocumentSort() {
-        DocumentDeleteQuery deleteQuery = delete().from(COLLECTION_NAME).build();
+        var deleteQuery = delete().from(COLLECTION_NAME).build();
         entityManager.delete(deleteQuery);
-        Iterable<DocumentEntity> entitiesSaved = entityManager.insert(getEntitiesWithValues());
-        List<DocumentEntity> entities = StreamSupport.stream(entitiesSaved.spliterator(), false).collect(Collectors.toList());
+        Iterable<CommunicationEntity> entitiesSaved = entityManager.insert(getEntitiesWithValues());
+        List<CommunicationEntity> entities = StreamSupport.stream(entitiesSaved.spliterator(), false).toList();
 
-        DocumentQuery query = select().from(COLLECTION_NAME)
+        var query = select().from(COLLECTION_NAME)
                 .where("age").gt(22)
                 .and("type").eq("V")
                 .orderBy("age").asc()
                 .build();
 
-        List<DocumentEntity> entitiesFound = entityManager.select(query).collect(Collectors.toList());
+        List<CommunicationEntity> entitiesFound = entityManager.select(query).collect(Collectors.toList());
         List<Integer> ages = entitiesFound.stream()
                 .map(e -> e.find("age").get().get(Integer.class))
                 .collect(Collectors.toList());
@@ -351,17 +349,17 @@ public class DefaultSolrDocumentManagerTest {
 
     @Test
     void shouldExecuteNativeQuery() {
-        DocumentDeleteQuery deleteQuery = delete().from(COLLECTION_NAME).build();
+        var deleteQuery = delete().from(COLLECTION_NAME).build();
         entityManager.delete(deleteQuery);
         entityManager.insert(getEntitiesWithValues());
 
-        List<DocumentEntity> entitiesFound = entityManager.solr("age:22 AND type:V AND _entity:person");
+        List<CommunicationEntity> entitiesFound = entityManager.solr("age:22 AND type:V AND _entity:person");
         assertEquals(1, entitiesFound.size());
     }
 
     @Test
     void shouldExecuteNativeQueryParams() {
-        DocumentDeleteQuery deleteQuery = delete().from(COLLECTION_NAME).build();
+        var deleteQuery = delete().from(COLLECTION_NAME).build();
         entityManager.delete(deleteQuery);
         entityManager.insert(getEntitiesWithValues());
 
@@ -370,7 +368,7 @@ public class DefaultSolrDocumentManagerTest {
         params.put("type", "V");
         params.put("entity", "person");
 
-        List<DocumentEntity> entitiesFound = entityManager.solr("age:@age AND type:@type AND _entity:@entity"
+        List<CommunicationEntity> entitiesFound = entityManager.solr("age:@age AND type:@type AND _entity:@entity"
                 , params);
         assertEquals(1, entitiesFound.size());
     }
@@ -378,14 +376,14 @@ public class DefaultSolrDocumentManagerTest {
     @Test
     void shouldExecuteNativeQueryParamsReplaceAll() {
         entityManager.insert(getEntitiesWithValues());
-        DocumentDeleteQuery deleteQuery = delete().from(COLLECTION_NAME).build();
+        var deleteQuery = delete().from(COLLECTION_NAME).build();
         entityManager.delete(deleteQuery);
         entityManager.insert(getEntitiesWithValues());
 
         Map<String, Object> params = new HashMap<>();
         params.put("age", 22);
 
-        List<DocumentEntity> entitiesFound = entityManager.solr("age:@age AND age:@age"
+        List<CommunicationEntity> entitiesFound = entityManager.solr("age:@age AND age:@age"
                 , params);
         assertEquals(1, entitiesFound.size());
     }
@@ -394,24 +392,24 @@ public class DefaultSolrDocumentManagerTest {
     @Test
     void shouldFindAll() {
         entityManager.insert(getEntity());
-        DocumentQuery query = select().from(COLLECTION_NAME).build();
-        List<DocumentEntity> entities = entityManager.select(query).collect(Collectors.toList());;
+        var query = select().from(COLLECTION_NAME).build();
+        List<CommunicationEntity> entities = entityManager.select(query).toList();
         assertFalse(entities.isEmpty());
     }
 
 
     @Test
     void shouldReturnErrorWhenSaveSubDocument() {
-        DocumentEntity entity = getEntity();
-        entity.add(Document.of("phones", Document.of("mobile", "1231231")));
+        var entity = getEntity();
+        entity.add(Element.of("phones", Element.of("mobile", "1231231")));
         Assertions.assertThrows(SolrException.class, () -> entityManager.insert(entity));
 
     }
 
     @Test
     void shouldSaveSubDocument2() {
-        DocumentEntity entity = getEntity();
-        entity.add(Document.of("phones", asList(Document.of("mobile", "1231231"), Document.of("mobile2", "1231231"))));
+        var entity = getEntity();
+        entity.add(Element.of("phones", asList(Element.of("mobile", "1231231"), Element.of("mobile2", "1231231"))));
         Assertions.assertThrows(SolrException.class, () -> entityManager.insert(entity));
     }
 
@@ -420,7 +418,7 @@ public class DefaultSolrDocumentManagerTest {
         Date date = new Date();
         LocalDate now = LocalDate.now();
 
-        DocumentEntity entity = DocumentEntity.of("download");
+        var entity = CommunicationEntity.of("download");
         long id = ThreadLocalRandom.current().nextLong(1, 10);
         entity.add(ID, id);
         entity.add("date", date);
@@ -428,11 +426,11 @@ public class DefaultSolrDocumentManagerTest {
 
         entityManager.insert(entity);
 
-        List<DocumentEntity> entities = entityManager.select(select().from("download")
+        List<CommunicationEntity> entities = entityManager.select(select().from("download")
                 .where(ID).eq(id).build()).collect(Collectors.toList());;
 
         assertEquals(1, entities.size());
-        DocumentEntity documentEntity = entities.get(0);
+        var documentEntity = entities.get(0);
         assertEquals(date, documentEntity.find("date").get().get(Date.class));
         assertEquals(now, documentEntity.find("date").get().get(LocalDate.class));
     }
@@ -444,84 +442,84 @@ public class DefaultSolrDocumentManagerTest {
 
     @Test
     void shouldCount() {
-        DocumentEntity entity = entityManager.insert(getEntity());
+        var entity = entityManager.insert(getEntity());
         assertTrue(entityManager.count(COLLECTION_NAME) > 0);
     }
 
     @Test
     void shouldInsertNull() {
-        DocumentEntity entity = getEntity();
-        entity.add(Document.of("name", null));
-        DocumentEntity documentEntity = entityManager.insert(entity);
-        Optional<Document> name = documentEntity.find("name");
+        var entity = getEntity();
+        entity.add(Element.of("name", null));
+        var documentEntity = entityManager.insert(entity);
+        Optional<Element> name = documentEntity.find("name");
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(name).isPresent();
-            soft.assertThat(name).get().extracting(Document::name).isEqualTo("name");
-            soft.assertThat(name).get().extracting(Document::get).isNull();
+            soft.assertThat(name).get().extracting(Element::name).isEqualTo("name");
+            soft.assertThat(name).get().extracting(Element::get).isNull();
         });
     }
 
     @Test
     void shouldUpdateNull(){
         var entity = entityManager.insert(getEntity());
-        entity.add(Document.of("name", null));
+        entity.add(Element.of("name", null));
         var documentEntity = entityManager.update(entity);
-        Optional<Document> name = documentEntity.find("name");
+        Optional<Element> name = documentEntity.find("name");
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(name).isPresent();
-            soft.assertThat(name).get().extracting(Document::name).isEqualTo("name");
-            soft.assertThat(name).get().extracting(Document::get).isNull();
+            soft.assertThat(name).get().extracting(Element::name).isEqualTo("name");
+            soft.assertThat(name).get().extracting(Element::get).isNull();
         });
     }
 
-    private DocumentEntity createSubdocumentList() {
-        DocumentEntity entity = DocumentEntity.of("AppointmentBook");
-        entity.add(Document.of(ID, new Random().nextInt()));
-        List<List<Document>> documents = new ArrayList<>();
+    private CommunicationEntity createSubdocumentList() {
+        CommunicationEntity entity = CommunicationEntity.of("AppointmentBook");
+        entity.add(Element.of(ID, new Random().nextInt()));
+        List<List<Element>> documents = new ArrayList<>();
 
-        documents.add(asList(Document.of("name", "Ada"), Document.of("type", ContactType.EMAIL),
-                Document.of("information", "ada@lovelace.com")));
+        documents.add(asList(Element.of("name", "Ada"), Element.of("type", ContactType.EMAIL),
+                Element.of("information", "ada@lovelace.com")));
 
-        documents.add(asList(Document.of("name", "Ada"), Document.of("type", ContactType.MOBILE),
-                Document.of("information", "11 1231231 123")));
+        documents.add(asList(Element.of("name", "Ada"), Element.of("type", ContactType.MOBILE),
+                Element.of("information", "11 1231231 123")));
 
-        documents.add(asList(Document.of("name", "Ada"), Document.of("type", ContactType.PHONE),
-                Document.of("information", "phone")));
+        documents.add(asList(Element.of("name", "Ada"), Element.of("type", ContactType.PHONE),
+                Element.of("information", "phone")));
 
-        entity.add(Document.of("contacts", documents));
+        entity.add(Element.of("contacts", documents));
         return entity;
     }
 
 
-    private DocumentEntity getEntity() {
-        DocumentEntity entity = DocumentEntity.of(COLLECTION_NAME);
+    private CommunicationEntity getEntity() {
+        CommunicationEntity entity = CommunicationEntity.of(COLLECTION_NAME);
         Map<String, Object> map = new HashMap<>();
         map.put("name", "Poliana");
         map.put("city", "Salvador");
         map.put(ID, ThreadLocalRandom.current().nextLong(1, 10));
-        List<Document> documents = Documents.of(map);
+        List<Element> documents = Elements.of(map);
         documents.forEach(entity::add);
         return entity;
     }
 
-    private List<DocumentEntity> getEntitiesWithValues() {
-        DocumentEntity lucas = DocumentEntity.of(COLLECTION_NAME);
-        lucas.add(Document.of("name", "Lucas"));
-        lucas.add(Document.of("age", 22));
-        lucas.add(Document.of("location", "BR"));
-        lucas.add(Document.of("type", "V"));
+    private List<CommunicationEntity> getEntitiesWithValues() {
+        CommunicationEntity lucas = CommunicationEntity.of(COLLECTION_NAME);
+        lucas.add(Element.of("name", "Lucas"));
+        lucas.add(Element.of("age", 22));
+        lucas.add(Element.of("location", "BR"));
+        lucas.add(Element.of("type", "V"));
 
-        DocumentEntity otavio = DocumentEntity.of(COLLECTION_NAME);
-        otavio.add(Document.of("name", "Otavio"));
-        otavio.add(Document.of("age", 25));
-        otavio.add(Document.of("location", "BR"));
-        otavio.add(Document.of("type", "V"));
+        CommunicationEntity otavio = CommunicationEntity.of(COLLECTION_NAME);
+        otavio.add(Element.of("name", "Otavio"));
+        otavio.add(Element.of("age", 25));
+        otavio.add(Element.of("location", "BR"));
+        otavio.add(Element.of("type", "V"));
 
-        DocumentEntity luna = DocumentEntity.of(COLLECTION_NAME);
-        luna.add(Document.of("name", "Luna"));
-        luna.add(Document.of("age", 23));
-        luna.add(Document.of("location", "US"));
-        luna.add(Document.of("type", "V"));
+        CommunicationEntity luna = CommunicationEntity.of(COLLECTION_NAME);
+        luna.add(Element.of("name", "Luna"));
+        luna.add(Element.of("age", 23));
+        luna.add(Element.of("location", "US"));
+        luna.add(Element.of("type", "V"));
 
         return asList(lucas, otavio, luna);
     }
